force-app/main/default/objects/TravellerInfo__c/TravellerInfo__c.object-meta.xml
<CustomObject>
    <description>B2B平台 C5作業PDF輸出數據、C1~C4資料暫存(Search PNR)</description>
    <label>TravellerInfo</label>
    <nameField>
        <label>travellerInfo名稱</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TravellerInfos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>