force-app/main/default/objects/TravellerInfo__c/fields/AircraftType__c.field-meta.xml
<CustomField>
    <fullName>AircraftType__c</fullName>
    <description>僅儲存ST01的機型</description>
    <label>飛機機型</label>
    <length>10</length>
    <type>Text</type>
</CustomField>