force-app/main/default/objects/TravellerInfo__c/fields/APE__c.field-meta.xml
<CustomField>
    <fullName>APE__c</fullName>
    <description>from:AP_P02，轉換成CTCE用</description>
    <inlineHelpText>from:AP_P02，轉換成CTCE用</inlineHelpText>
    <label>APE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>