force-app/main/default/objects/TravellerInfo__c/fields/APM__c.field-meta.xml
<CustomField>
    <fullName>APM__c</fullName>
    <description>from:AP_7，轉換成CTCM用</description>
    <inlineHelpText>from:AP_7，轉換成CTCM用</inlineHelpText>
    <label>APM</label>
    <length>50</length>
    <type>Text</type>
</CustomField>