force-app/main/default/objects/TravellerInfo__c/fields/BagTag__c.field-meta.xml
<CustomField>
    <fullName>BagTag__c</fullName>
    <description>String長度共 13 碼
/BusinessData/Product/BagTagType
/BusinessData/Product/BagTagAirlineCodeNumber
/BusinessData/Product/BagTagSerialNumber
/BusinessData/Product/BagTagNumberInSequence

*ex: &apos;BagTagType&apos; + &apos;BagTagAirlineCodeNumber&apos; + &apos;BagTagSerialNumber&apos; + &apos;BagTagNumberInSequence&apos;
=&gt;&apos;1&apos; + &apos;890&apos; + &apos;102345&apos; + &apos;001&apos;(Sequence前補滿兩位0)</description>
    <inlineHelpText>String長度共 13 碼
/BusinessData/Product/BagTagType
/BusinessData/Product/BagTagAirlineCodeNumber
/BusinessData/Product/BagTagSerialNumber
/BusinessData/Product/BagTagNumberInSequence

*ex: &apos;BagTagType&apos; + &apos;BagTagAirlineCodeNumber&apos; + &apos;BagTagSerialNumber&apos; + &apos;BagTagNumberInSequence&apos;
=&gt;&apos;1&apos; + &apos;890&apos; + &apos;102345&apos; + &apos;001&apos;(Sequence前補滿兩位0)</inlineHelpText>
    <label>Bag Tag</label>
    <length>13</length>
    <type>Text</type>
</CustomField>