force-app/main/default/objects/TravellerInfo__c/fields/Barcode__c.field-meta.xml
<CustomField>
    <fullName>Barcode__c</fullName>
    <formula>IMAGE(&quot;https://bwipjs-api.metafloor.com/?bcid=pdf417&amp;text=&quot; &amp; 	Barcode_Formula__c &amp; &quot;&amp;scale=2&amp;rotate=n&quot;, &quot;PDF417 Barcode&quot;)</formula>
    <label>Barcode</label>
    <type>Text</type>
</CustomField>