force-app/main/default/objects/TravellerInfo__c/fields/Barcode_Formula__c.field-meta.xml
<CustomField>
    <fullName>Barcode_Formula__c</fullName>
    <description>2D Barcode 欄位組合</description>
    <formula>&quot;M&quot;
&amp;&quot;1&quot;
&amp;LastName__c
&amp;&quot;/&quot;
&amp;firstName__c
&amp;IF(
    LEN(LastName__c &amp; &quot;/&quot; &amp; firstName__c) &lt; 20, 
    MID(
        &quot;                    &quot;, 
        1, 
        20 - LEN(LastName__c &amp; &quot;/&quot; &amp; firstName__c)
    ), 
    &quot;&quot;
)
&amp;TicketType__c
&amp;PNR__c
&amp;IF(
    LEN(PNR__c) &lt; 7, 
    MID(
        &quot;       &quot;, 
        1, 
        7 - LEN(PNR__c)
    ), 
    &quot;&quot;
)
&amp;DepartureLocation__c
&amp;Destination__c
&amp;&quot;JX &quot;
&amp;LPAD(FlightNumber__c, 4, &quot;0&quot;) &amp;
IF(
    LEN(FlightNumber__c) &lt; 5,
    &quot; &quot;,
    &quot;&quot;
)
&amp;TEXT(DATEVALUE(DepartureLocationGMTLocal__c) - DATE(YEAR(DATEVALUE(DepartureLocationGMTLocal__c)), 1, 1)+1) 
&amp;CabinCode__c 
&amp;LPAD(Seat__c, 4, &quot;0&quot;)
&amp;RIGHT(&quot;0000&quot; &amp; SecurityNumber__c, 4) &amp; &quot; &quot;
&amp;&quot;3&quot;
&amp;&quot;48&quot;
&amp;&quot;&gt;&quot;
&amp;&quot;6&quot;
&amp;&quot;18&quot;
&amp;CASE(
    paxDetails_type__c,
    &quot;A&quot;, &quot;0&quot;,
    &quot;C&quot;, &quot;3&quot;,
    &quot;IN&quot;, &quot;4&quot;,
    &quot;S&quot;  
)
&amp;&quot; &quot;
&amp;&quot;T&quot;
&amp;TEXT(MOD(YEAR(TODAY()), 10)) &amp;
RIGHT(
    &quot;000&quot; &amp;
    TEXT(
        TODAY() - DATE(YEAR(TODAY()), 1, 1) + 1
    ),
    3
)
&amp;&quot;B&quot;
&amp;LEFT(OperatingCarrierCode__c &amp; &quot;   &quot;, 3)
&amp;IF(
    LEN(BagTag__c) &lt; 13,
    BagTag__c &amp; LEFT(&quot;             &quot;, 13 - LEN(BagTag__c)),
    BagTag__c
)
&amp;&quot;2A&quot;
&amp;PAX__c
&amp;IF(Selectee__c=&quot;Y&quot;,&quot;1&quot;,&quot;0&quot;)
&amp;&quot; &quot;
&amp;LEFT(OperatingCarrierCode__c &amp; &quot;   &quot;, 3)
&amp;LEFT(FQTVCarrierCode__c &amp; &quot;   &quot;, 3)
&amp;LEFT(FQTVNumber__c &amp; &quot;                &quot;, 16)
&amp;&quot; &quot;
&amp;&quot;   &quot;
&amp;&quot;N&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>2D Barcode 欄位組合</inlineHelpText>
    <label>Barcode Formula</label>
    <type>Text</type>
</CustomField>