force-app/main/default/objects/TravellerInfo__c/fields/BoardingGate__c.field-meta.xml
<CustomField>
    <fullName>BoardingGate__c</fullName>
    <label>登機門</label>
    <length>5</length>
    <type>Text</type>
</CustomField>