force-app/main/default/objects/TravellerInfo__c/fields/BoardingPriority__c.field-meta.xml
<CustomField>
    <fullName>BoardingPriority__c</fullName>
    <label>登機區域(順序)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>