force-app/main/default/objects/TravellerInfo__c/fields/BookingClass__c.field-meta.xml
<CustomField>
    <fullName>BookingClass__c</fullName>
    <label>BookingClass</label>
    <length>5</length>
    <type>Text</type>
</CustomField>