force-app/main/default/objects/TravellerInfo__c/fields/C1Finished__c.field-meta.xml
<CustomField>
    <fullName>C1Finished__c</fullName>
    <defaultValue>false</defaultValue>
    <description>當該筆資料在C1成功回傳WBS時，註記TRUE。</description>
    <label>C1完成</label>
    <type>Checkbox</type>
</CustomField>