force-app/main/default/objects/TravellerInfo__c/fields/C1OperationDisable__c.field-meta.xml
<CustomField>
    <fullName>C1OperationDisable__c</fullName>
    <formula>IF(
AND(
C1OperationStartDateTime__c &lt;= NOW(),
NOW() &lt;= C1OperationEndDateTime__c
),
FALSE,
TRUE
)</formula>
    <label>C1作業不可使用</label>
    <type>Checkbox</type>
</CustomField>