force-app/main/default/objects/TravellerInfo__c/fields/C1OperationStartDateTime__c.field-meta.xml
<CustomField>
    <fullName>C1OperationStartDateTime__c</fullName>
    <label>C1作業時間(起)</label>
    <type>DateTime</type>
</CustomField>