force-app/main/default/objects/TravellerInfo__c/fields/C2Finished__c.field-meta.xml
<CustomField>
    <fullName>C2Finished__c</fullName>
    <defaultValue>false</defaultValue>
    <description>當該筆資料在C2成功回傳WBS時，註記TRUE。</description>
    <inlineHelpText>當該筆資料在C2成功回傳WBS時，註記TRUE。</inlineHelpText>
    <label>C2完成</label>
    <type>Checkbox</type>
</CustomField>