force-app/main/default/objects/TravellerInfo__c/fields/C2OperationDisable__c.field-meta.xml
<CustomField>
    <fullName>C2OperationDisable__c</fullName>
    <formula>IF(
AND(
C2OperationStartDateTime__c &lt;= NOW(),
NOW() &lt;= C2OperationEndDateTime__c
),
FALSE,
TRUE
)</formula>
    <label>C2作業不可使用</label>
    <type>Checkbox</type>
</CustomField>