force-app/main/default/objects/TravellerInfo__c/fields/C2OperationEndDateTime__c.field-meta.xml
<CustomField>
    <fullName>C2OperationEndDateTime__c</fullName>
    <description>透過Flow依照是否為美國線，抓取起飛時間-C2當下的參數(起)、起飛時間-C2當下的參數(訖)。</description>
    <inlineHelpText>透過Flow依照是否為美國線，抓取起飛時間-C2當下的參數(起)、起飛時間-C2當下的參數(訖)。</inlineHelpText>
    <label>C2作業時間(迄)</label>
    <type>DateTime</type>
</CustomField>