force-app/main/default/objects/TravellerInfo__c/fields/C3_Error_Code__c.field-meta.xml
<CustomField>
    <fullName>C3_Error_Code__c</fullName>
    <label>C3 Error Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>