force-app/main/default/objects/TravellerInfo__c/fields/C3CheckboxDisplay__c.field-meta.xml
<CustomField>
    <fullName>C3CheckboxDisplay__c</fullName>
    <description>該欄位用來判斷C3前端旅客是否需呈現Checkbox供使用者操作</description>
    <formula>AND(
  NOT(ISBLANK(PAX__c)),
  PassportFinished__c = TRUE,
  NOT(
    OR(
      C3OperationDisable__c = TRUE,
      CheckDisable__c = TRUE,
      CAS__c = &quot;CRJ&quot;,
      CAS__c = &quot;CAC&quot;,
      CAS__c = &quot;CST&quot;
    )
  )
)</formula>
    <inlineHelpText>該欄位用來判斷C3前端旅客是否需呈現Checkbox供使用者操作</inlineHelpText>
    <label>C3 Checkbox Display</label>
    <type>Checkbox</type>
</CustomField>