force-app/main/default/objects/TravellerInfo__c/fields/C3ExternalFinished__c.field-meta.xml
<CustomField>
    <fullName>C3ExternalFinished__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PNR撈回時填寫</description>
    <label>C3外部系統完成</label>
    <type>Checkbox</type>
</CustomField>