force-app/main/default/objects/TravellerInfo__c/fields/C3Finished__c.field-meta.xml
<CustomField>
    <fullName>C3Finished__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C3完成</label>
    <type>Checkbox</type>
</CustomField>