force-app/main/default/objects/TravellerInfo__c/fields/C3OperationDisable__c.field-meta.xml
<CustomField>
    <fullName>C3OperationDisable__c</fullName>
    <formula>IF(
    AND(
        C3OperationStartDateTime__c &lt;= NOW(),
        NOW() &lt;= C3OperationEndDateTime__c
    ),
    FALSE,
    TRUE
)</formula>
    <label>C3作業不可使用</label>
    <type>Checkbox</type>
</CustomField>