force-app/main/default/objects/TravellerInfo__c/fields/C3OperationEndDateTime__c.field-meta.xml
<CustomField>
    <fullName>C3OperationEndDateTime__c</fullName>
    <description>透過Flow依照是否為美國線，抓取起飛時間-C3當下的參數(起)、起飛時間-C3當下的參數(訖)。</description>
    <inlineHelpText>透過Flow依照是否為美國線，抓取起飛時間-C3當下的參數(起)、起飛時間-C3當下的參數(訖)。</inlineHelpText>
    <label>C3作業時間(訖)</label>
    <type>DateTime</type>
</CustomField>