force-app/main/default/objects/TravellerInfo__c/fields/C3OperationStartDateTime__c.field-meta.xml
<CustomField>
    <fullName>C3OperationStartDateTime__c</fullName>
    <description>透過Flow依照是否為美國線，抓取起飛時間-C3當下的參數。</description>
    <inlineHelpText>透過Flow依照是否為美國線，抓取起飛時間-C3當下的參數。</inlineHelpText>
    <label>C3作業時間(起)</label>
    <type>DateTime</type>
</CustomField>