force-app/main/default/objects/TravellerInfo__c/fields/C3Status__c.field-meta.xml
<CustomField>
    <fullName>C3Status__c</fullName>
    <formula>IF(
  CheckDisable__c = TRUE,
  &quot;請洽機場櫃台&quot;,
  IF(
    ISBLANK(CAS__c),
    IF(
      ISBLANK(PAX__c),
      &quot;尚未開票&quot;,
      &quot;系統尚未開放&quot;
    ),
    IF(
      CAS__c = &quot;CAC&quot;,
      &quot;已報到&quot;,
      IF(
        CAS__c = &quot;CST&quot;,
        &quot;候補，請洽機場櫃台&quot;,
        IF( AND(
          CAS__c = &quot;CNA&quot;, C3Finished__c =true) ,
          &quot;請檢查資料並重新嘗試&quot;,
          &quot;未報到&quot;
        )
      )
    )
  )
)</formula>
    <label>C3報到狀態</label>
    <type>Text</type>
</CustomField>