force-app/main/default/objects/TravellerInfo__c/fields/C3StatusResponse__c.field-meta.xml
<CustomField>
    <fullName>C3StatusResponse__c</fullName>
    <description>旅客狀態(CAS)的紀錄歷程，是否有在B2B平台報到過</description>
    <inlineHelpText>旅客狀態(CAS)的紀錄歷程，是否有在B2B平台報到過</inlineHelpText>
    <label>C3報到狀態紀錄</label>
    <length>50</length>
    <type>Text</type>
</CustomField>