force-app/main/default/objects/TravellerInfo__c/fields/C4BoardingPassPrinted__c.field-meta.xml
<CustomField>
    <fullName>C4BoardingPassPrinted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C4紙本登機證已列印</label>
    <type>Checkbox</type>
</CustomField>