force-app/main/default/objects/TravellerInfo__c/fields/C4BoardingPassPrintedTime__c.field-meta.xml
<CustomField>
    <fullName>C4BoardingPassPrintedTime__c</fullName>
    <description>列印當下時間+時區。(SF裡面會再+使用者時區，因此SF的畫面不可參考)</description>
    <inlineHelpText>列印當下時間+時區。(SF裡面會再+使用者時區，因此SF的畫面不可參考)</inlineHelpText>
    <label>C4紙本登機證列印時間</label>
    <type>DateTime</type>
</CustomField>