force-app/main/default/objects/TravellerInfo__c/fields/C4BoardingPassPrintedTimeGMTLocal__c.field-meta.xml
<CustomField>
    <fullName>C4BoardingPassPrintedTimeGMTLocal__c</fullName>
    <description>2025/9/15 : 改為+0顯示，不需顯示當地時區</description>
    <formula>C4BoardingPassPrintedTime__c</formula>
    <label>C4紙本登機證列印時間(當地時間)</label>
    <type>DateTime</type>
</CustomField>