force-app/main/default/objects/TravellerInfo__c/fields/C4CheckboxDisplay__c.field-meta.xml
<CustomField>
    <fullName>C4CheckboxDisplay__c</fullName>
    <formula>AND(
  NOT(
    OR(
      Selectee__c = &quot;Y&quot;,
      EEX__c = &quot;EEX&quot;
    )
  ),
  AND(
    CAS__c = &quot;CAC&quot;,
    PrintDisable__c = false,
    OR(
      C4PaperBoardingPass__c = TRUE,
      C4EBoardingPass__c = TRUE
    )
  )
)</formula>
    <label>C4 Checkbox Display</label>
    <type>Checkbox</type>
</CustomField>