force-app/main/default/objects/TravellerInfo__c/fields/C4EBoardingPass__c.field-meta.xml
<CustomField>
    <fullName>C4EBoardingPass__c</fullName>
    <defaultValue>false</defaultValue>
    <description>透過Flow依照與AirportCode抓取參數</description>
    <inlineHelpText>透過Flow依照與AirportCode抓取參數</inlineHelpText>
    <label>C4電子登機證允許</label>
    <type>Checkbox</type>
</CustomField>