force-app/main/default/objects/TravellerInfo__c/fields/C4Note__c.field-meta.xml
<CustomField>
    <fullName>C4Note__c</fullName>
    <label>C4Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>