force-app/main/default/objects/TravellerInfo__c/fields/CabinClass__c.field-meta.xml
<CustomField>
    <fullName>CabinClass__c</fullName>
    <formula>CASE(
    CabinCode__c,
    &quot;F&quot;, &quot;FIRST CLASS&quot;,
    &quot;J&quot;, &quot;BUSINESS CLASS&quot;,
    &quot;W&quot;, &quot;PREMIUM ECONOMY CLASS&quot;,
    &quot;Y&quot;, &quot;ECONOMY CLASS&quot;,
    &quot;UNKNOWN&quot;  /* 預設值，當 cabin_code 不符合上述條件時顯示 */
)</formula>
    <label>艙等名稱</label>
    <type>Text</type>
</CustomField>