force-app/main/default/objects/TravellerInfo__c/fields/CabinCode__c.field-meta.xml
<CustomField>
    <fullName>CabinCode__c</fullName>
    <description>機位艙等(非訂位艙等) / 起飛前2日系統自動帶入</description>
    <inlineHelpText>機位艙等(非訂位艙等) / 起飛前2日系統自動帶入</inlineHelpText>
    <label>艙等代碼</label>
    <length>2</length>
    <type>Text</type>
</CustomField>