force-app/main/default/objects/TravellerInfo__c/fields/CAS__c.field-meta.xml
<CustomField>
    <fullName>CAS__c</fullName>
    <description>CAC Customer Acceptance Status is Accepted
CNA Customer Acceptance Status is Not Accepted
CRJ Customer acceptance Status is Rejected
CST Customer Acceptance Status is Standby</description>
    <inlineHelpText>CAC Customer Acceptance Status is Accepted
CNA Customer Acceptance Status is Not Accepted
CRJ Customer acceptance Status is Rejected
CST Customer Acceptance Status is Standby</inlineHelpText>
    <label>報到狀態(CAS)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>