force-app/main/default/objects/TravellerInfo__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>起飛前2日系統自動帶入</description>
    <inlineHelpText>起飛前2日系統自動帶入</inlineHelpText>
    <label>Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>