force-app/main/default/objects/TravellerInfo__c/fields/CheckDisable__c.field-meta.xml
<CustomField>
    <fullName>CheckDisable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SK、SSR、Other任一值包含在參數中，則Flow更新為true</description>
    <inlineHelpText>SK、SSR、Other任一值包含在參數中，則Flow更新為true</inlineHelpText>
    <label>SK、SSR、Other不可報到</label>
    <type>Checkbox</type>
</CustomField>