force-app/main/default/objects/TravellerInfo__c/fields/DateOfBirth__c.field-meta.xml
<CustomField>
    <fullName>DateOfBirth__c</fullName>
    <label>出生日期</label>
    <length>20</length>
    <type>Text</type>
</CustomField>