force-app/main/default/objects/TravellerInfo__c/fields/DepartureDate2__c.field-meta.xml
<CustomField>
    <fullName>DepartureDate2__c</fullName>
    <label>起飛日期2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>