force-app/main/default/objects/TravellerInfo__c/fields/DepartureLocation2__c.field-meta.xml
<CustomField>
    <fullName>DepartureLocation2__c</fullName>
    <label>起飛地2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>