force-app/main/default/objects/TravellerInfo__c/fields/DepartureLocation__c.field-meta.xml
<CustomField>
    <fullName>DepartureLocation__c</fullName>
    <label>起飛地</label>
    <length>10</length>
    <type>Text</type>
</CustomField>