force-app/main/default/objects/TravellerInfo__c/fields/DepartureLocationGMT8__c.field-meta.xml
<CustomField>
    <fullName>DepartureLocationGMT8__c</fullName>
    <description>解析WBS給的文字存成日期/時間，DB儲存GMT+0，前端顯示User的GMT時區</description>
    <formula>DATETIMEVALUE(
    TEXT(
        2000 + VALUE(MID(DepartureDate__c, 5, 2))
    ) &amp; &quot;-&quot; &amp;
    RIGHT(&quot;0&quot; &amp; TEXT(VALUE(MID(DepartureDate__c, 3, 2))), 2) &amp; &quot;-&quot; &amp;
    RIGHT(&quot;0&quot; &amp; TEXT(VALUE(MID(DepartureDate__c, 1, 2))), 2) &amp; &quot; &quot; &amp;
    LEFT(DepartureTime__c, 2) &amp; &quot;:&quot; &amp;
    RIGHT(DepartureTime__c, 2) &amp; &quot;:00&quot;
) 
- (DepartureLocationGMT__c / 24)</formula>
    <inlineHelpText>解析WBS給的文字存成日期/時間，DB儲存GMT+0，前端顯示User的GMT時區</inlineHelpText>
    <label>起飛日期(台北時間)</label>
    <type>DateTime</type>
</CustomField>