force-app/main/default/objects/TravellerInfo__c/fields/DepartureLocationGMT__c.field-meta.xml
<CustomField>
    <fullName>DepartureLocationGMT__c</fullName>
    <description>由Flow寫入</description>
    <inlineHelpText>由Flow寫入</inlineHelpText>
    <label>起飛地時區</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>