force-app/main/default/objects/TravellerInfo__c/fields/DepartureTerminal__c.field-meta.xml
<CustomField>
    <fullName>DepartureTerminal__c</fullName>
    <label>出發航廈</label>
    <length>5</length>
    <type>Text</type>
</CustomField>