force-app/main/default/objects/TravellerInfo__c/fields/DepartureTime2__c.field-meta.xml
<CustomField>
    <fullName>DepartureTime2__c</fullName>
    <label>起飛時間2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>