force-app/main/default/objects/TravellerInfo__c/fields/DepartureTime__c.field-meta.xml
<CustomField>
    <fullName>DepartureTime__c</fullName>
    <description>WBS為起飛地當地時區</description>
    <inlineHelpText>WBS為起飛地當地時區</inlineHelpText>
    <label>起飛時間</label>
    <length>20</length>
    <type>Text</type>
</CustomField>