force-app/main/default/objects/TravellerInfo__c/fields/Destination2__c.field-meta.xml
<CustomField>
    <fullName>Destination2__c</fullName>
    <label>目的地2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>