force-app/main/default/objects/TravellerInfo__c/fields/DID__c.field-meta.xml
<CustomField>
    <fullName>DID__c</fullName>
    <description>起飛前2日系統自動帶入</description>
    <inlineHelpText>起飛前2日系統自動帶入</inlineHelpText>
    <label>DID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>