force-app/main/default/objects/TravellerInfo__c/fields/EEX__c.field-meta.xml
<CustomField>
    <fullName>EEX__c</fullName>
    <description>位置是否為緊急出入口</description>
    <inlineHelpText>位置是否為緊急出入口</inlineHelpText>
    <label>EEX</label>
    <length>5</length>
    <type>Text</type>
</CustomField>