force-app/main/default/objects/TravellerInfo__c/fields/firstName__c.field-meta.xml
<CustomField>
    <fullName>firstName__c</fullName>
    <label>名</label>
    <length>20</length>
    <type>Text</type>
</CustomField>