force-app/main/default/objects/TravellerInfo__c/fields/FlightNumber__c.field-meta.xml
<CustomField>
    <fullName>FlightNumber__c</fullName>
    <label>航班號碼</label>
    <length>10</length>
    <type>Text</type>
</CustomField>