force-app/main/default/objects/TravellerInfo__c/fields/FlightPrefix__c.field-meta.xml
<CustomField>
    <fullName>FlightPrefix__c</fullName>
    <label>航班號碼Prefix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>