force-app/main/default/objects/TravellerInfo__c/fields/FQTVCarrierCode__c.field-meta.xml
<CustomField>
    <fullName>FQTVCarrierCode__c</fullName>
    <description>String長度共 3 碼，值後面補滿空格
/BusinessData/Product/FQTVCarrierCode</description>
    <inlineHelpText>String長度共 3 碼，值後面補滿空格
/BusinessData/Product/FQTVCarrierCode</inlineHelpText>
    <label>FQTVCarrierCode</label>
    <length>3</length>
    <type>Text</type>
</CustomField>