force-app/main/default/objects/TravellerInfo__c/fields/FQTVNumber__c.field-meta.xml
<CustomField>
    <fullName>FQTVNumber__c</fullName>
    <description>String長度共 16 碼，值後面補滿空格，若無值需補 16碼 空格
/BusinessData/Product/FQTVNumber</description>
    <inlineHelpText>String長度共 16 碼，值後面補滿空格，若無值需補 16碼 空格
/BusinessData/Product/FQTVNumber</inlineHelpText>
    <label>FQTVNumber</label>
    <length>16</length>
    <type>Text</type>
</CustomField>