force-app/main/default/objects/TravellerInfo__c/fields/FQTVTierCode__c.field-meta.xml
<CustomField>
    <fullName>FQTVTierCode__c</fullName>
    <label>旅客卡別</label>
    <length>5</length>
    <type>Text</type>
</CustomField>