force-app/main/default/objects/TravellerInfo__c/fields/gender__c.field-meta.xml
<CustomField>
    <fullName>gender__c</fullName>
    <description>M=male
F= female
MI=male infant
FI=female infant</description>
    <label>性別</label>
    <length>10</length>
    <type>Text</type>
</CustomField>