force-app/main/default/objects/TravellerInfo__c/fields/group_code__c.field-meta.xml
<CustomField>
    <fullName>group_code__c</fullName>
    <description>group code</description>
    <label>group_code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>