force-app/main/default/objects/TravellerInfo__c/fields/Group_Code_Check__c.field-meta.xml
<CustomField>
    <fullName>Group_Code_Check__c</fullName>
    <label>Group Code Check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>