force-app/main/default/objects/TravellerInfo__c/fields/Group_Code_Status__c.field-meta.xml
<CustomField>
    <fullName>Group_Code_Status__c</fullName>
    <description>電子登機證用，呈現是否需檢查護照</description>
    <formula>IF(group_code__c=&apos;OK&apos;,&quot;CHECK PPT&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>電子登機證用，呈現是否需檢查護照</inlineHelpText>
    <label>Group Code Status</label>
    <type>Text</type>
</CustomField>