force-app/main/default/objects/TravellerInfo__c/fields/IATA_MSO_Code__c.field-meta.xml
<CustomField>
    <fullName>IATA_MSO_Code__c</fullName>
    <label>IATA_MSO_Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>