force-app/main/default/objects/TravellerInfo__c/fields/LatestBoardingTime__c.field-meta.xml
<CustomField>
    <fullName>LatestBoardingTime__c</fullName>
    <label>登機時間</label>
    <length>5</length>
    <type>Text</type>
</CustomField>