force-app/main/default/objects/TravellerInfo__c/fields/Meal__c.field-meta.xml
<CustomField>
    <fullName>Meal__c</fullName>
    <label>餐點類型</label>
    <length>255</length>
    <type>Text</type>
</CustomField>