force-app/main/default/objects/TravellerInfo__c/fields/OperatingCarrierCode__c.field-meta.xml
<CustomField>
    <fullName>OperatingCarrierCode__c</fullName>
    <description>String長度共 3 碼，值後面補滿空格
/BusinessData/Product/OperatingCarrierCode</description>
    <label>OperatingCarrierCode</label>
    <length>3</length>
    <type>Text</type>
</CustomField>