force-app/main/default/objects/TravellerInfo__c/fields/PassengerType__c.field-meta.xml
<CustomField>
    <fullName>PassengerType__c</fullName>
    <description>ADT(成人:12歲以上)、CHD(小孩:12至2歲)、INF(嬰兒:2歲以下)</description>
    <label>旅客類型</label>
    <length>10</length>
    <type>Text</type>
</CustomField>