force-app/main/default/objects/TravellerInfo__c/fields/PassengerTypeOrderBy__c.field-meta.xml
<CustomField>
    <fullName>PassengerTypeOrderBy__c</fullName>
    <description>CASE(PassengerType__c,
  &quot;ADT&quot;, 1,
  &quot;CHD&quot;, 2,
  &quot;INF&quot;, 3,
  4
)</description>
    <formula>CASE(PassengerType__c,
  &quot;ADT&quot;, 1,
  &quot;CHD&quot;, 2,
  &quot;INF&quot;, 3,
  4
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>旅客類型(排序用)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>