force-app/main/default/objects/TravellerInfo__c/fields/PassportExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>PassportExpiryDate__c</fullName>
    <label>護照到期日</label>
    <length>20</length>
    <type>Text</type>
</CustomField>