force-app/main/default/objects/TravellerInfo__c/fields/PassportFirstName__c.field-meta.xml
<CustomField>
    <fullName>PassportFirstName__c</fullName>
    <label>護照名</label>
    <length>50</length>
    <type>Text</type>
</CustomField>