force-app/main/default/objects/TravellerInfo__c/fields/PassportIssuingCountry__c.field-meta.xml
<CustomField>
    <fullName>PassportIssuingCountry__c</fullName>
    <label>護照發照國家</label>
    <length>10</length>
    <type>Text</type>
</CustomField>