force-app/main/default/objects/TravellerInfo__c/fields/PassportLastName__c.field-meta.xml
<CustomField>
    <fullName>PassportLastName__c</fullName>
    <label>護照姓</label>
    <length>50</length>
    <type>Text</type>
</CustomField>