force-app/main/default/objects/TravellerInfo__c/fields/PassportNumber__c.field-meta.xml
<CustomField>
    <fullName>PassportNumber__c</fullName>
    <label>護照號碼</label>
    <length>20</length>
    <type>Text</type>
</CustomField>