force-app/main/default/objects/TravellerInfo__c/fields/PassportString__c.field-meta.xml
<CustomField>
    <fullName>PassportString__c</fullName>
    <formula>&apos;P/&apos; + PassportIssuingCountry__c + &apos;/&apos; +  PassportNumber__c + &apos;/&apos; + country__c + &apos;/&apos; + DateOfBirth__c + &apos;/&apos; + gender__c + &apos;/&apos; + PassportExpiryDate__c + &apos;/&apos; + LastName__c  + &apos;/&apos; + firstName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PassportString</label>
    <type>Text</type>
</CustomField>