force-app/main/default/objects/TravellerInfo__c/fields/PAX__c.field-meta.xml
<CustomField>
    <fullName>PAX__c</fullName>
    <label>票號(PAX)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>