force-app/main/default/objects/TravellerInfo__c/fields/paxDetails_type__c.field-meta.xml
<CustomField>
    <fullName>paxDetails_type__c</fullName>
    <description>起飛前2日系統自動帶入</description>
    <inlineHelpText>起飛前2日系統自動帶入</inlineHelpText>
    <label>paxDetails_type</label>
    <length>5</length>
    <type>Text</type>
</CustomField>