force-app/main/default/objects/TravellerInfo__c/fields/PNR__c.field-meta.xml
<CustomField>
    <fullName>PNR__c</fullName>
    <label>訂位代號</label>
    <length>10</length>
    <type>Text</type>
</CustomField>