force-app/main/default/objects/TravellerInfo__c/fields/PrintDisable__c.field-meta.xml
<CustomField>
    <fullName>PrintDisable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>用來控制GRID按鈕與Checkbox是否顯示</description>
    <inlineHelpText>用來控制GRID按鈕與Checkbox是否顯示</inlineHelpText>
    <label>旅客不可列印/寄送</label>
    <type>Checkbox</type>
</CustomField>