force-app/main/default/objects/TravellerInfo__c/fields/PT__c.field-meta.xml
<CustomField>
    <fullName>PT__c</fullName>
    <label>訂位代號編號</label>
    <length>10</length>
    <type>Text</type>
</CustomField>