force-app/main/default/objects/TravellerInfo__c/fields/PTOrderBy__c.field-meta.xml
<CustomField>
    <fullName>PTOrderBy__c</fullName>
    <formula>IF(
  ISBLANK(PT__c) || NOT(ISNUMBER(PT__c)),
  NULL,
  VALUE(PT__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>訂位代號編號(排序用)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>