force-app/main/default/objects/TravellerInfo__c/fields/RQST_OT__c.field-meta.xml
<CustomField>
    <fullName>RQST_OT__c</fullName>
    <label>RQST_OT</label>
    <length>5</length>
    <type>Text</type>
</CustomField>