force-app/main/default/objects/TravellerInfo__c/fields/Seat__c.field-meta.xml
<CustomField>
    <fullName>Seat__c</fullName>
    <label>座位位置</label>
    <length>20</length>
    <type>Text</type>
</CustomField>