force-app/main/default/objects/TravellerInfo__c/fields/SeatIsChargeable__c.field-meta.xml
<CustomField>
    <fullName>SeatIsChargeable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>旅客坐的位置屬性</description>
    <inlineHelpText>旅客坐的位置屬性</inlineHelpText>
    <label>付費座位</label>
    <type>Checkbox</type>
</CustomField>