force-app/main/default/objects/TravellerInfo__c/fields/SeatStatus__c.field-meta.xml
<CustomField>
    <fullName>SeatStatus__c</fullName>
    <label>座位屬性</label>
    <length>20</length>
    <type>Text</type>
</CustomField>