force-app/main/default/objects/TravellerInfo__c/fields/SecurityNumber__c.field-meta.xml
<CustomField>
    <fullName>SecurityNumber__c</fullName>
    <label>報到序號</label>
    <length>5</length>
    <type>Text</type>
</CustomField>