force-app/main/default/objects/TravellerInfo__c/fields/Selectee__c.field-meta.xml
<CustomField>
    <fullName>Selectee__c</fullName>
    <description>String長度共 1 碼
/BusinessData/Product/AQQSelecteeIndicator
indicator==&quot;1&quot;表示有selectee</description>
    <inlineHelpText>String長度共 1 碼
/BusinessData/Product/AQQSelecteeIndicator
indicator==&quot;1&quot;表示有selectee</inlineHelpText>
    <label>Selectee</label>
    <length>1</length>
    <type>Text</type>
</CustomField>