force-app/main/default/objects/TravellerInfo__c/fields/SSR_Raw_Data_Segment_Relate__c.field-meta.xml
<CustomField>
    <fullName>SSR_Raw_Data_Segment_Relate__c</fullName>
    <description>去程Segment Relate</description>
    <inlineHelpText>去程Segment Relate</inlineHelpText>
    <label>SSR Raw Data Segment Relate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>