force-app/main/default/objects/TravellerInfo__c/fields/SSR_RawData__c.field-meta.xml
<CustomField>
    <fullName>SSR_RawData__c</fullName>
    <description>SSR Raw Data from PNR</description>
    <label>SSR Raw Data</label>
    <length>255</length>
    <type>Text</type>
</CustomField>