force-app/main/default/objects/TravellerInfo__c/fields/ST01__c.field-meta.xml
<CustomField>
    <fullName>ST01__c</fullName>
    <label>ST01</label>
    <length>2</length>
    <type>Text</type>
</CustomField>