force-app/main/default/objects/TravellerInfo__c/fields/ST02__c.field-meta.xml
<CustomField>
    <fullName>ST02__c</fullName>
    <label>ST02</label>
    <length>2</length>
    <type>Text</type>
</CustomField>