force-app/main/default/objects/TravellerInfo__c/fields/TicketType__c.field-meta.xml
<CustomField>
    <fullName>TicketType__c</fullName>
    <label>TicketType</label>
    <length>1</length>
    <type>Text</type>
</CustomField>