force-app/main/default/objects/TravellerInfo__c/fields/title__c.field-meta.xml
<CustomField>
    <fullName>title__c</fullName>
    <label>稱謂</label>
    <length>10</length>
    <type>Text</type>
</CustomField>