force-app/main/default/objects/TravellerInfo__c/fields/UCI__c.field-meta.xml
<CustomField>
    <fullName>UCI__c</fullName>
    <description>起飛前2日系統自動帶入</description>
    <inlineHelpText>起飛前2日系統自動帶入</inlineHelpText>
    <label>UCI</label>
    <length>20</length>
    <type>Text</type>
</CustomField>