force-app/main/default/objects/TravellerInfo__c/fields/US_Bound__c.field-meta.xml
<CustomField>
    <fullName>US_Bound__c</fullName>
    <defaultValue>false</defaultValue>
    <label>美國線</label>
    <type>Checkbox</type>
</CustomField>